about、blogページを作成

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,7 +16,7 @@
       <a href="/about/">about</a>
       <a href="/blog/">blog</a>
     </nav>
-		<h1>Astro</h1>
-		<p>初めてのアストロブログをnetlifyにアップしてみる</p>
+		<h1>blog</h1>
+		<p>ブログのページ</p>
 	</body>
 </html>
