--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -16,7 +16,7 @@
       <a href="/about/">about</a>
       <a href="/blog/">blog</a>
     </nav>
-		<h1>Astro</h1>
-		<p>初めてのアストロブログをnetlifyにアップしてみる</p>
+		<h1>About</h1>
+		<p>about.astroを作成している</p>
 	</body>
 </html>
