--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = 'ブログ一覧';
 ---
 
 <html lang="ja">
@@ -8,7 +8,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
     <nav>
@@ -16,7 +16,11 @@
       <a href="/about/">about</a>
       <a href="/blog/">blog</a>
     </nav>
-		<h1>blog</h1>
+		<h1>{pageTitle}</h1>
 		<p>ブログのページ</p>
+		<ul>
+			<li><a href="/posts/post01/">最初の投稿01</a></li>
+			<li><a href="/posts/post02/">2回目の投稿02</a></li>
+		</ul>
 	</body>
 </html>
