--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-
+const pageTitle = 'top';
 ---
 
 <html lang="ja">
@@ -8,7 +8,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
     <nav>
@@ -16,7 +16,7 @@
       <a href="/about/">about</a>
       <a href="/blog/">blog</a>
     </nav>
-		<h1>Astro</h1>
+		<h1>{pageTitle}</h1>
 		<p>初めてのアストロブログをnetlifyにアップしてみる</p>
 	</body>
 </html>
